kubernetes/apps/asf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: asf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: asf
    spec:
      securityContext:
        fsGroup: 976
        runAsGroup: 976
        runAsNonRoot: true
        runAsUser: 976
      containers:
        - name: asf
          image: docker.io/justarchi/archisteamfarm:6.3.10.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1242
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: logs
              mountPath: /app/logs
            - name: logs
              mountPath: /app/log.txt
              subPath: log.txt
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 60
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: asf-config
        - name: logs
          emptyDir: {}
        - name: tmp
          emptyDir: {}
