kubernetes/apps/asf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asf
spec:
  selector:
    app.kubernetes.io/name: asf
  ports:
    - name: http
      port: 1242
      targetPort: http
