kubernetes/apps/asf/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: asf-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: asf
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pomerium
      ports:
        - port: http
          protocol: TCP
